--- a/app/src/main/res/layout/fragment_calendario.xml
+++ b/app/src/main/res/layout/fragment_calendario.xml
@@ -1,131 +1,234 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
-    android:layout_height="match_parent" tools:context="antonio.junior.Calendario">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="match_parent"
+    tools:context="antonio.junior.Calendario">
 
-   <LinearLayout
-       android:layout_width="fill_parent"
-       android:layout_height="110dp"
-       android:background="#323232"
-       android:id="@+id/layout_title_calendar"
-       >
-       
-       
-       <LinearLayout
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:orientation="vertical"
+    <LinearLayout
+        android:id="@+id/layout_title_calendar"
+        android:layout_width="fill_parent"
+        android:layout_height="140dp"
+        android:background="#323232">
 
-           android:layout_weight="3"
-           android:padding="15dp"
 
-          >
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:src="@drawable/user"
-                android:layout_marginRight="5dp"/>
-            <TextView
+            android:layout_weight="4"
+
+            android:orientation="vertical"
+            android:padding="15dp"
+
+            >
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Antonio Sierra"
-                android:layout_marginBottom="10dp"
-                android:textColor="#D2D2D2"/>
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_marginRight="5dp"
+                    android:src="@drawable/juez" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:text="Wilder Machado"
+                    android:textColor="#D2D2D2" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_marginRight="5dp"
+                    android:src="@drawable/city" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:text="Estadio Metropolitano"
+                    android:textColor="#D2D2D2" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_marginRight="5dp"
+                    android:src="@drawable/calendar" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:text="Jueves 40 junio "
+                    android:textColor="#D2D2D2" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_marginRight="5dp"
+                    android:src="@drawable/time" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:text="07:48 PM"
+                    android:textColor="#D2D2D2" />
+
+            </LinearLayout>
+
         </LinearLayout>
 
-           <LinearLayout
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:orientation="horizontal">
-               <ImageView
-                   android:layout_width="20dp"
-                   android:layout_height="20dp"
-                   android:src="@drawable/correo"
-                   android:layout_marginRight="5dp"/>
-               <TextView
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:text="Correo"
-                   android:layout_marginBottom="10dp"
-                   android:textColor="#D2D2D2"/>
-           </LinearLayout>
-           <LinearLayout
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:orientation="horizontal">
-               <ImageView
-                   android:layout_width="20dp"
-                   android:layout_height="20dp"
-                   android:src="@drawable/phone"
-                   android:layout_marginRight="5dp"/>
-               <TextView
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:text="Telefono"
-                   android:layout_marginBottom="10dp"
-                   android:textColor="#D2D2D2"/>
-           </LinearLayout>
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:layout_weight="0"
+            android:padding="25dp">
 
-       </LinearLayout>
-       <RelativeLayout
-           android:layout_width="wrap_content"
-           android:layout_height="fill_parent"
-           android:layout_weight="1"
-           android:padding="25dp"
-           >
-           <ImageView
+            <ImageView
 
 
-               android:layout_width="90dp"
-               android:layout_height="90dp"
-               android:src="@drawable/aa"
-               android:layout_alignParentStart="true" />
-       </RelativeLayout>
-   </LinearLayout>
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:src="@drawable/junior2" />
+        </RelativeLayout>
+    </LinearLayout>
+
     <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_marginTop="110dp"
         android:layout_height="40dp"
+        android:layout_marginTop="140dp"
         android:background="#1B1919">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
             android:text="Proxima Fecha"
             android:textColor="#D2D2D2"
-            android:textSize="16dp"
-            android:layout_centerInParent="true"/>
+            android:textSize="16dp" />
     </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_centerInParent="true"
-        android:background="@drawable/equipo"
-        android:layout_marginTop="150dp">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            >
-            <ImageView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:src="@drawable/junior2"/>
-            <ImageView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:src="@drawable/vs"/>
+        android:layout_marginTop="180dp">
+
+        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+
+            <!--<ImageView-->
+            <!--android:layout_width="fill_parent"-->
+            <!--android:layout_height="fill_parent"-->
+            <!--android:scaleType="centerCrop"-->
+            <!--android:src="@drawable/equipo" />-->
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_margin="15dp"
+                android:background="@drawable/layout_rounded"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="50dp"
+                    android:layout_margin="10dp"
+
+                    android:padding="10dp"
 
 
-            <ImageView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:src="@drawable/medallo"/>
-        </LinearLayout>
+                    >
+
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_weight="2"
+                        android:src="@drawable/junior" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="VS" />
+
+
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_centerInParent="true"
+                        android:layout_weight="2"
+                        android:src="@drawable/uniautonoma" />
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="20dp"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp">
+
+                    <RelativeLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:layout_weight="2"
+                            android:text="Atletico Junior" />
+
+                    </RelativeLayout>
+
+                    <RelativeLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:layout_weight="2"
+                            android:text="Uniautonoma FC" />
+
+                    </RelativeLayout>
+                </LinearLayout>
+
+            </LinearLayout>
+
+
+
+        </ScrollView>
     </RelativeLayout>
+
 
 </FrameLayout>
