--- a/app/src/main/res/layout/fragment_calendario.xml
+++ b/app/src/main/res/layout/fragment_calendario.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:id="@+id/layout_title_calendar"
         android:layout_width="fill_parent"
-        android:layout_height="140dp"
+        android:layout_height="180dp"
         android:background="#323232">
 
 
@@ -98,6 +98,25 @@
                     android:textColor="#D2D2D2" />
 
             </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_marginRight="5dp"
+                    android:src="@drawable/tv" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:text="Trasmite"
+                    android:textColor="#D2D2D2" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
@@ -119,7 +138,7 @@
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="40dp"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="160dp"
         android:background="#1B1919">
 
         <TextView
@@ -136,7 +155,7 @@
         android:layout_height="fill_parent"
         android:layout_centerInParent="true"
 
-        android:layout_marginTop="180dp">
+        android:layout_marginTop="200dp">
 
         <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
