Probando lista con imagenes

--- a/app/src/main/res/layout/fragment_noticias.xml
+++ b/app/src/main/res/layout/fragment_noticias.xml
@@ -1,10 +1,13 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" tools:context="antonio.junior.Noticias">
-<ScrollView
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-    
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layoutnoticias"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
+    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical"><ListView android:id="@+id/list" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
+
+    </ListView><Button android:id="@+id/button1" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="Refresh cache"/></LinearLayout>
+<!--
+
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -35,17 +38,92 @@
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceLarge"
                         android:text="Juan David Pérez entrenó por primera vez con Junior"
-                        android:id="@+id/textView" />
+                        android:id="@+id/textView"
+                        android:textColor="#D2D2D2"/>
                 </LinearLayout>
                 <LinearLayout
-                    android:padding="5dp"
+                    android:padding="7dp"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+
+                    >
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Attribute android:orientation has two values: horizontal (default so we don’t have to add it) and vertical. Let’s change to vertical and leave all other elements as they are now."/>
+                        android:textColor="#D2D2D2"
+                        android:text="Juan David Pérez firmó ayer el contrato que lo une al Junior por los próximos seis meses y de inmediato se vistió de cortos para unirse a los trabajos con el resto del plantel rojiblanco."></TextView> </LinearLayout>
+                <LinearLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="30dp"
+
+                    android:orientation="horizontal"
+                    android:layout_marginLeft="5dp">
+
+                    <ImageView
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:src="@drawable/like"
+                        android:layout_marginLeft="2dp"
+                        android:layout_marginRight="20dp"/>
+                    <ImageView
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:src="@drawable/comentar"/>
+                    <RelativeLayout
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="right"
+                        android:layout_marginRight="15dp"
+                        android:layout_marginTop="5dp"
+                        >
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="24 junio 2015"
+                            android:layout_gravity="center_vertical"
+                            android:textColor="#D2D2D2"
+                            />
+                    </RelativeLayout>
+
                 </LinearLayout>
+
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/layout_rounded"
+                android:layout_marginBottom="15dp"
+                android:orientation="vertical">
+                <ImageView
+                    android:layout_width="fill_parent"
+                    android:layout_height="180dp"
+                    android:src="@drawable/camisa"
+                    android:scaleType="centerCrop"
+                    android:gravity="center"/>
+                <LinearLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+
+                    android:padding="5dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:text="Juan David Pérez entrenó por primera vez con Junior"
+                        android:id="@+id/textView2" />
+                </LinearLayout>
+                <LinearLayout
+                    android:padding="7dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    >
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Juan David Pérez firmó ayer el contrato que lo une al Junior por los próximos seis meses y de inmediato se vistió de cortos para unirse a los trabajos con el resto del plantel rojiblanco."></TextView> </LinearLayout>
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="30dp"
@@ -87,6 +165,7 @@
 
 
         </LinearLayout>
-    
-</ScrollView>
-</FrameLayout>
+-->
+
+
+    </android.support.v4.widget.SwipeRefreshLayout>
