--- a/app/src/main/res/drawable/layout_rounded.xml
+++ b/app/src/main/res/drawable/layout_rounded.xml
@@ -3,7 +3,7 @@
 
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#BDBDBD"/>
+            <solid android:color="#ffff"/>
             <corners android:radius="5dp"/>
         </shape>
     </item>
