--- a/app/src/main/res/layout/fragment_noticias.xml
+++ b/app/src/main/res/layout/fragment_noticias.xml
@@ -3,9 +3,12 @@
     android:id="@+id/layoutnoticias"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
-    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical"><ListView android:id="@+id/list" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
 
-    </ListView><Button android:id="@+id/button1" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="Refresh cache"/></LinearLayout>
+    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical">
+
+        <ListView android:id="@+id/list" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1">
+
+    </ListView><Button android:id="@+id/button1" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="Refrescar Cache"/></LinearLayout>
 <!--
 
         <LinearLayout
